refactor todo service find by username